# simple-examples

./: .clang-format  .gitignore  README.md  vimrc  zshrc
C/FSM/: readme.md
C/FSM/src/: cfio3_FSM.cpp
C/Image_feature_position/: README.md
C/Image_feature_position/src/: action.py  log.py  main.py
C/c_client_server/: client  client.c  server
C/malloc_test/: a.out  main.c  page.h
C/p99/: CMakeLists.txt  build.sh  main.c  tracker.c  tracker.h  tracker2.c  tracker3.c  tracker_test.c
C/plugin_module/: CMakeLists.txt  main.c
C/plugin_module/plugin/: CMakeLists.txt  plugin_example.c  plugin_interface.h
C/segment_fault_handle_test/: Makefile
C/trace_test/: analysis.txt  gmon.out  ltrace.txt  main.c  perf.data
FSM/src/: FSM_c.c  cfio3_FSM.h
Image_feature_position/src/: feature_locate.py  file_control.py  log.py  net.py  test_log.py
MPI/: README.md
MPI/MPI_Test/: Makefile  README.md  mpi_test_Win_lock.c  mpi_test_Win_start_post.c  mpi_test_Win_start_post_2.c  mpi_test_send_recv.c
Makefile/: Makefile  readme.md
Python/C+Python/: add.c  py.py
Python/locust/: TcpSocketServer.py  no_web.sh  star_web.sh
Python/network_test/: net_test_client.py  net_test_server.py
Python/socks5/sock5_py/: readme.md  sock5_client.py  sock5_client_encrypt.py  sock5_server.py  sock5_server_encrypt.py
Python/socks5/socks5_c-master/: README.md
Python/web_tool/flask/: .appenv  .flaskenv  app.db  config.py  init_venv.sh  readme.md  requirements.txt  service_tool.py  test.py
blog/: _config.yml  package-lock.json  package.json
blog/source/_posts/: 学习和学习方法-问题和解决问题.md
blog/source/categories/: index.md
blog/source/tags/: index.md
blog/themes/next/: _config.yml
c_client_server/: server.c
cmakefile/: .gitignore  CMakeLists.txt  build.sh
cmakefile/exe-only/: CMakeLists.txt  main.c  print.c  print.h
cmakefile/share-only/: CMakeLists.txt  build.sh  share.c  share.h  share_test.c
endian_bitfield/: main.c  run.sh
go_test/: go.mod  go.sum
go_test/anonymouss_func/: main.go
go_test/cgo/: cgo.go  cgo2.c  cgo2.go
go_test/channel/: channel.go
go_test/client/: client.go
go_test/context/: context.go
go_test/defer/: main.go
go_test/gin_vue_test/: main.go
go_test/gin_vue_test/web/: package.json
go_test/globalvar/: main.go
go_test/globalvar/global/: global.go
go_test/globalvar/pkg1/: pkg.go
go_test/go-jwt/: main.go
go_test/go-redis-test/: main.go
go_test/go-yigeyun/esb/: main.go
go_test/go-yigeyun/yongyou/: yongyou.go
go_test/go_reflect/: main.go
go_test/go_reflect_example/: example.go
go_test/go_scope/: main.go
go_test/go_scope/func_scope/: func.go
go_test/go_scope/var_scope/: var.go
go_test/go_test_for_interview/: README.md  test1.go  test10.go  test11.go  test2.go  test3.go  test4.go  test5.go  test6.go  test7.go  test8.go  tmp
go_test/goipset_test/: main  main.go
go_test/gojson/: gojson.go
go_test/grpc-go/: client.go  hello.proto  server.go
go_test/grpc-go/proto/: hello.pb.go  hello_grpc.pb.go
go_test/http_example/: client.go
go_test/insert/: insert.sh  insertIptables.go
go_test/interface_test/: conf.go  main.go
go_test/ipset_test/: Makefile  cipset.c  cipset.h  ipset.go
go_test/parse_opt/: main.go
go_test/recover/: recover.go
go_test/redis_pubsub/: main.go
go_test/server/: server.go
go_test/sleep_rountine/: main.go
go_test/time_parese/: time_parese.go
go_test/timer/: timer.go
go_test/tmp/: main.go
go_test/watcher/: watch.go
go_test/zmq-example/: main.go
gohello/: go.mod  main.c  main.go
gohello/goroutine/: goroutine.go
gohello/hello/: hello.go
gohello/httpserver/: httpserver.go
gohello/routinewait/: routinewait.go
nghttp2_test/: CMakeLists.txt  server.key
nghttp2_test/client/: main.c
nghttp2_test/server/: main.c
segment_fault_handle_test/: signal.c
shell/: Msg  README.md  check.cron  fileServer.sh  runopt.sh  scanfiles  scanfilesR.sh  set_defense.sh  sh.sh  shell_usage.sh  tcp_check.sh
tls_psk/: .clang-format  5gc.crt  5gc.key  5gc_ca.crt  5gc_ca.key  build.sh  client.cpp  iwf.crt  iwf.key  iwf_ca.crt  run.sh  server.cpp  server.crt  server2.cpp
(+46 files in other folders)
